--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         rel="stylesheet">
 
 <body>
-    <header class="header">
+    <header id="top" class="header">
         <div class="main_container">
             <div class="navigation_container">
                 <div class="logo">
-                    <a href="/"><img src="img-header\logo.svg" alt="logo"></a>
+                    <a href="#top"><img src="img-header\logo.svg" alt="logo"></a>
                 </div>
                 <nav>
                     <a class="link" href="#theproblem">the problem</a> <span>|</span>
