--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         rel="stylesheet">
 
 <body>
-    <header id="top" class="header">
-        <div class="main_container">
+    <header class="header">
+        <div id="top" class="main_container">
             <div class="navigation_container">
                 <div class="logo">
                     <a href="#top"><img src="img-header\logo.svg" alt="logo"></a>
