--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header">
-        <div id="top" class="main_container">
+        <div class="main_container">
             <div class="navigation_container">
                 <div class="logo">
                     <a href="#top"><img src="img-header\logo.svg" alt="logo"></a>
@@ -33,7 +33,7 @@
 
     <section class="section1">
         <div class="pipernet">
-            <h1 class="text1">PiperNet Is Here</h1>
+            <h1 id="top" class="text1">PiperNet Is Here</h1>
         </div>
     </section>
 
